codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_reasoning_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Reasoning Level for gpt-5.4

  1. None              Fastest responses with reasoning disabled
  2. Low               Fast responses with lighter reasoning
  3. Max               Maximum available reasoning
  4. Medium (default)  Balances speed and reasoning depth for everyday tasks
› 5. High (current)    Greater reasoning depth for complex problems
  6. Extra high        Extra high reasoning depth for complex problems

  Press enter to confirm or esc to go back
